# BTP_GUI

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  SimulationEngine.cpp  SimulationEngine.h  VTKTerrainVisualizer.cpp  VTKTerrainVisualizer.h  VTKWaterVisualizer.cpp  VTKWaterVisualizer.h  copy_gdal_dlls.bat  copy_qt_plugins.bat  deploy.bat  fix_gdal_and_qt.bat  fix_qt_platform_plugin.bat  main.cpp  mainwindow.cpp  mainwindow.h  preloader.cpp  qtlogging.ini  run_with_qt_env.bat  run_without_vtk.bat  verify_dependencies.bat
resources/: DEM_Amba.tif  DEM_Central_Park(10m).tif  DEM_Gray_Haven.csv  DEM_Gray_Haven.tif  DEM_IITKGP.tif  DEM_NTPC_Vindhayanagar.csv  DEM_NTPC_Vindhayanagar.tif  README.md  dem_to_csv.py  sample_dem.csv
